chore: fixup for unnecessary whitespace

--- a/Koha/Plugin/Com/PerplexedTheta/SENUX/static_files/src/css/senux/senux-nav.scss
+++ b/Koha/Plugin/Com/PerplexedTheta/SENUX/static_files/src/css/senux/senux-nav.scss
@@ -164,7 +164,7 @@ img[src="/opac-tmpl/bootstrap/images/koha-green-logo.png?raw=1"] {
 #members,
 #header_langmenu {
     li {
-        a {
+        a:not(.dropdown-item) {
             color: $navbarLinkText;
             background-color: $navbarLinkBg;
             border: $navbarLinkBorderSettings;
